--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
 /*
-	Theme Name: noTheme
-	Theme URI: https://5th.ch/
-	Description: noDescription yet.
-	Version: 0.0.1
-	Author: Marco Koch
-	Author URI: https://5th.ch/
-	Tags: HTML5, CSS3
+    Theme Name: noTheme
+    Theme URI: https://5th.ch/
+    Description: noDescription yet.
+    Version: 0.0.1
+    Author: Marco Koch
+    Author URI: https://5th.ch/
+    Tags: HTML5, CSS3
 
-	License: copyright Marco Koch
-	License URI: https://5th.ch/
+    License: GNU General Public License v2 or later
+    License URI: http://www.gnu.org/licenses/gpl-2.0.html
 */
