--- a/style.css
+++ b/style.css
@@ -10,3 +10,8 @@
     License: GNU General Public License v2 or later
     License URI: http://www.gnu.org/licenses/gpl-2.0.html
 */
+
+
+body {
+    font-family: 'sans-serif';
+}
